--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ريباريو (Reparo) | نظام إدارة محلات صيانة الجوالات الذكي</title>
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-F2M14VP4BR');
+  </script>
+
+  <meta name="description" content="ريباريو (Reparo) هو نظام متكامل لإدارة محلات صيانة الجوالات، يدعم العمل بدون إنترنت، إدارة التذاكر، والربط مع واتساب.">
+  <meta name="keywords" content="صيانة جوالات, نظام إدارة محلات, ريباريو, Reparo, إدارة تذاكر صيانة">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  
   <style>
-    body {
-      font-family: 'Tajawal', sans-serif;
-    }
-
-    .gradient-bg {
-      background: linear-gradient(135deg, #2563eb 0%, #1eaf90 100%);
-    }
+    body { font-family: 'Tajawal', sans-serif; }
+    .gradient-bg { background: linear-gradient(135deg, #2563eb 0%, #1eaf90 100%); }
+    .swiper-pagination-bullet-active { background-color: #16a34a !important; }
   </style>
 </head>
 
@@ -28,14 +35,14 @@
   <nav class="fixed z-50 w-full border-b bg-white/80 backdrop-blur-md">
     <div class="flex items-center justify-between px-6 py-4 mx-auto max-w-7xl">
       <div class="flex items-center gap-2">
-        <div class="rounded-lg text-whit ">
-          <img src="images/reparo.ico" class="size-10" alt="asd">
+        <div class="rounded-lg">
+          <img src="images/reparo.ico" class="size-10" alt="Reparo Icon">
         </div>
         <span class="text-2xl font-black tracking-tight text-green-900">Reparo</span>
       </div>
       <div class="hidden space-x-8 space-x-reverse font-bold md:flex text-slate-600">
         <a href="#features" class="transition hover:text-green-600">المميزات</a>
-        <a href="#trust" class="transition hover:text-green-600">بناء الثقة</a>
+        <a href="#trust-and-reviews" class="transition hover:text-green-600">بناء الثقة</a>
         <a href="#tech" class="transition hover:text-green-600">التقنيات</a>
       </div>
       <a target="_blank" href="https://github.com/SHETER0/reparo-releases/releases/download/v1.0.9/Reparo-Setup-1.0.9.exe" class="bg-green-600 text-white px-6 py-2.5 rounded-full font-bold hover:bg-green-700 transition shadow-lg shadow-green-200">
@@ -91,19 +98,18 @@
       </div>
     </div>
   </header>
+
   <section id="trust-and-reviews" class="relative py-12 overflow-hidden lg:py-24 bg-slate-900">
     <div class="absolute top-0 left-0 w-64 h-64 rounded-full md:w-96 md:h-96 bg-green-600/10 blur-3xl"></div>
     <div class="absolute bottom-0 right-0 w-64 h-64 rounded-full md:w-96 md:h-96 bg-green-600/10 blur-3xl"></div>
 
     <div class="relative z-10 px-4 mx-auto sm:px-6 max-w-7xl">
       <div class="grid items-start grid-cols-1 gap-10 lg:grid-cols-12 lg:gap-16">
-
         <div class="flex flex-col items-end order-2 text-right lg:col-span-7 lg:order-1">
           <h2 class="mb-8 text-3xl font-black leading-tight text-white md:text-5xl">
             الثقة هي أغلى ما تملك.. <br>
             <span class="text-green-500">Reparo يحميها لك.</span>
           </h2>
-
           <div class="w-full mt-4 space-y-10 md:mt-12">
             <div class="flex flex-row-reverse items-start gap-4 md:gap-6">
               <div class="p-4 text-blue-400 border bg-blue-600/20 rounded-2xl border-blue-500/30 shrink-0">
@@ -114,7 +120,6 @@
                 <p class="text-sm leading-relaxed text-slate-400 md:text-base">تخلص من الملاحظات الورقية. الفواتير الرقمية والرسائل المنظمة تعطي انطباعاً بأنك مركز صيانة معتمد وضخم.</p>
               </div>
             </div>
-
             <div class="flex flex-row-reverse items-start gap-4 md:gap-6">
               <div class="p-4 text-indigo-400 border bg-indigo-600/20 rounded-2xl border-indigo-500/30 shrink-0">
                 <i class="text-xl md:text-2xl fas fa-eye"></i>
@@ -124,7 +129,6 @@
                 <p class="text-sm leading-relaxed text-slate-400 md:text-base">إمكانية تتبع حالة الإصلاح فورياً تزيد من طمأنينة العميل وتجعله يثق بجودة عملك ومصداقية محلك.</p>
               </div>
             </div>
-
             <div class="flex flex-row-reverse items-start gap-4 md:gap-6">
               <div class="p-4 text-purple-400 border bg-purple-600/20 rounded-2xl border-purple-500/30 shrink-0">
                 <i class="text-xl md:text-2xl fas fa-shield-alt"></i>
@@ -140,17 +144,14 @@
         <div class="order-1 w-full lg:col-span-5 lg:order-2">
           <div class="bg-blue-600 p-0.5 rounded-[2.5rem] shadow-2xl shadow-blue-500/20">
             <div class="bg-white rounded-[2.4rem] p-6 md:p-10 relative overflow-hidden">
-
               <div class="mb-8 text-center">
                 <h3 class="text-xl font-black text-slate-800">قالوا عن Reparo</h3>
                 <div class="flex justify-center gap-1 mt-2 text-yellow-400">
                   <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                 </div>
               </div>
-
               <div class="w-full overflow-hidden swiper mySwiper">
                 <div class="swiper-wrapper">
-
                   <div class="relative px-2 py-8 text-center swiper-slide">
                     <i class="absolute text-5xl opacity-50 md:text-6xl fas fa-quote-right top-4 right-4 text-blue-50"></i>
                     <p class="relative z-10 mb-8 text-base font-medium leading-relaxed md:text-xl text-slate-700">
@@ -162,7 +163,6 @@
                       <p class="text-xs md:text-sm text-slate-500">مدير المخزون</p>
                     </div>
                   </div>
-
                   <div class="relative px-2 py-8 text-center swiper-slide">
                     <i class="absolute text-5xl opacity-50 md:text-6xl fas fa-quote-right top-4 right-4 text-blue-50"></i>
                     <p class="relative z-10 mb-8 text-base font-medium leading-relaxed md:text-xl text-slate-700">
@@ -174,7 +174,6 @@
                       <p class="text-xs md:text-sm text-slate-500">صاحب مركز صيانة</p>
                     </div>
                   </div>
-
                   <div class="relative px-2 py-8 text-center swiper-slide">
                     <i class="absolute text-5xl opacity-50 md:text-6xl fas fa-quote-right top-4 right-4 text-blue-50"></i>
                     <p class="relative z-10 mb-8 text-base font-medium leading-relaxed md:text-xl text-slate-700">
@@ -186,14 +185,12 @@
                       <p class="text-xs md:text-sm text-slate-500">فني جوالات</p>
                     </div>
                   </div>
-
                 </div>
                 <div class="swiper-pagination !static mt-4"></div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </section>
@@ -259,81 +256,57 @@
       </div>
       <div>
         <h4 class="mb-6 font-bold ">تواصل معنا</h4>
-        <div class="flex items-center justify-start gap-4 text-center">
+        <div class="flex items-center justify-start gap-4">
           <a target="_blank" href="https://wa.me/+966558071305" class="text-2xl transition text-slate-400 hover:text-green-600"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
     </div>
     <div class="px-6 pt-8 mx-auto mt-16 text-sm font-medium text-center border-t max-w-7xl text-slate-400">
       <a target="_blank" href="https://github.com/SHETER0" class="text-black hover:text-green-600"><i class="fab fa-github"></i></a>
-      &copy; 2024 نظام ريباريو (Reparo). مرخص بموجب MIT. | الإصدار 1.0.0
+      &copy; 2024-2026 نظام ريباريو (Reparo). مرخص بموجب MIT. | الإصدار 1.0.0
     </div>
-
   </footer>
 
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      loop: true,
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 5000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+
+    const templates = [
+      "مرحباً عميلنا، تم إنشاء الفاتورة رقم #101 الخاصة بـ iPhone 13. سنبدأ العمل قريباً.",
+      "مرحباً، الفاتورة رقم #102 قيد التنفيذ حالياً. فريقنا الفني يعمل على جهازك الآن.",
+      "مرحباً، الفاتورة رقم #103 قيد الفحص حالياً. سنوافيك بالتشخيص قريباً.",
+      "بشرى سارة! جهازك جاهز للاستلام الآن. الفاتورة رقم #106 مكتملة.",
+      "تم إكمال الإصلاح بنجاح للفاتورة رقم #107. شكراً لاختيارك خدماتنا."
+    ];
+
+    const textElement = document.getElementById('template-text');
+    const badgeElement = document.getElementById('whatsapp-badge');
+
+    function changeTemplate() {
+      textElement.style.opacity = 0;
+      setTimeout(() => {
+        const randomIndex = Math.floor(Math.random() * templates.length);
+        textElement.innerText = templates[randomIndex];
+        textElement.style.opacity = 1;
+        badgeElement.classList.add('scale-105');
+        setTimeout(() => badgeElement.classList.remove('scale-105'), 200);
+      }, 500);
+    }
+
+    setInterval(changeTemplate, 5000);
+    window.onload = changeTemplate;
+  </script>
 </body>
-<script>
-  var swiper = new Swiper(".mySwiper", {
-    loop: true,
-    spaceBetween: 30,
-    centeredSlides: true,
-    autoplay: {
-      delay: 5000,
-      disableOnInteraction: false,
-    },
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-  });
-  const templates = [
-    "مرحباً عميلنا، تم إنشاء الفاتورة رقم #101 الخاصة بـ iPhone 13. سنبدأ العمل قريباً.",
-    "مرحباً، الفاتورة رقم #102 قيد التنفيذ حالياً. فريقنا الفني يعمل على جهازك الآن.",
-    "مرحباً، الفاتورة رقم #103 قيد الفحص حالياً. سنوافيك بالتشخيص قريباً.",
-    "تم تشخيص العطل للفاتورة رقم #104. سنوافيك بالتحديثات القادمة فوراً.",
-    "تنبيه: الفاتورة رقم #105 متوقفة مؤقتاً بانتظار وصول قطع الغيار اللازمة.",
-    "بشرى سارة! جهازك جاهز للاستلام الآن. الفاتورة رقم #106 مكتملة.",
-    "تم إكمال الإصلاح بنجاح للفاتورة رقم #107. شكراً لاختيارك خدماتنا.",
-    "نعتذر، تم إلغاء الفاتورة رقم #108. يرجى التواصل معنا للاستفسار.",
-    "تم وضع الفاتورة رقم #109 في حالة انتظار. سنتواصل معك قريباً بالتفاصيل.",
-    "تم إكمال الفاتورة رقم #110. يرجى العلم بوجود رصيد متبقي للمبلغ الإجمالي."
-  ];
-
-  const textElement = document.getElementById('template-text');
-  const badgeElement = document.getElementById('whatsapp-badge');
-
-  function changeTemplate() {
-    // إضافة تأثير اختفاء بسيط قبل تغيير النص
-    textElement.style.opacity = 0;
-
-    setTimeout(() => {
-      // اختيار نص عشوائي
-      const randomIndex = Math.floor(Math.random() * templates.length);
-      textElement.innerText = templates[randomIndex];
-
-      // إعادة الظهور
-      textElement.style.opacity = 1;
-
-      // إضافة حركة خفيفة للبطاقة كاملة لجذب الانتباه
-      badgeElement.classList.add('scale-105');
-      setTimeout(() => badgeElement.classList.remove('scale-105'), 200);
-    }, 500);
-  }
-
-  // تشغيل الدالة كل 5 ثوانٍ
-  setInterval(changeTemplate, 5000);
-
-  // تشغيل أول مرة عند تحميل الصفحة
-  window.onload = changeTemplate;
-
-  window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag('js', new Date());
-
-  gtag('config', 'G-F2M14VP4BR');
-</script>
 
 </html>
