--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ريباريو (Reparo) | نظام إدارة محلات صيانة الجوالات الذكي</title>
-  
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
+  <link rel="icon" type="image/x-icon" href="images/reparo.ico">
+  <link rel="apple-touch-icon" href="images/reparo.ico">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
