--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sheter0.github.io/reparo-website/">
+    <meta property="og:title" content="ريباريو (Reparo) | نظام إدارة صيانة الجوالات">
+    <meta property="og:description" content="حول محلك إلى مركز صيانة احترافي مع نظام ريباريو المتكامل.">
+    <meta property="og:image" content="https://sheter0.github.io/reparo-website/images/reparo.ico">
   <title>ريباريو (Reparo) | نظام إدارة محلات صيانة الجوالات الذكي</title>
   <link rel="icon" type="image/x-icon" href="images/reparo.ico">
   <link rel="apple-touch-icon" href="images/reparo.ico">
