--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sheter0.github.io/reparo-website/">
-    <meta property="og:title" content="ريباريو (Reparo) | نظام إدارة صيانة الجوالات">
-    <meta property="og:description" content="حول محلك إلى مركز صيانة احترافي مع نظام ريباريو المتكامل.">
-    <meta property="og:image" content="https://sheter0.github.io/reparo-website/images/reparo.ico">
+  <meta property="og:url" content="https://sheter0.github.io/reparo-website/">
+  <meta property="og:title" content="ريباريو (Reparo) | نظام إدارة صيانة الجوالات">
+  <meta property="og:description" content="حول محلك إلى مركز صيانة احترافي مع نظام ريباريو المتكامل.">
+  <meta property="og:image" content="https://sheter0.github.io/reparo-website/images/reparo.ico">
+  
   <title>ريباريو (Reparo) | نظام إدارة محلات صيانة الجوالات الذكي</title>
+  
   <link rel="icon" type="image/x-icon" href="images/reparo.ico">
   <link rel="apple-touch-icon" href="images/reparo.ico">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2M14VP4BR"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -21,7 +25,7 @@
   </script>
 
   <meta name="description" content="ريباريو (Reparo) هو نظام متكامل لإدارة محلات صيانة الجوالات، يدعم العمل بدون إنترنت، إدارة التذاكر، والربط مع واتساب.">
-  <meta name="keywords" content="صيانة جوالات, نظام إدارة محلات, ريباريو, Reparo, إدارة تذاكر صيانة">
+  <meta name="keywords" content="برنامج صيانة جوالات, نظام إدارة محلات, ريباريو, Reparo, إدارة تذاكر صيانة, فواتير صيانة, برنامج صيانة كمبيوتر, إدارة ورشة صيانة">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -44,7 +48,7 @@
         <div class="rounded-lg">
           <img src="images/reparo.ico" class="size-10" alt="Reparo Icon">
         </div>
-        <span class="text-2xl font-black tracking-tight text-green-900">Reparo</span>
+        <span class="text-2xl font-black tracking-tight text-green-900">REPARO</span>
       </div>
       <div class="hidden space-x-8 space-x-reverse font-bold md:flex text-slate-600">
         <a href="#features" class="transition hover:text-green-600">المميزات</a>
@@ -180,17 +184,6 @@
                       <p class="text-xs md:text-sm text-slate-500">صاحب مركز صيانة</p>
                     </div>
                   </div>
-                  <div class="relative px-2 py-8 text-center swiper-slide">
-                    <i class="absolute text-5xl opacity-50 md:text-6xl fas fa-quote-right top-4 right-4 text-blue-50"></i>
-                    <p class="relative z-10 mb-8 text-base font-medium leading-relaxed md:text-xl text-slate-700">
-                      "واجهة المستخدم سهلة جداً والفنيين تعودوا عليها بسرعة. ميزة العمل بدون إنترنت أنقذتنا في الكثير من الأوقات."
-                    </p>
-                    <div class="flex flex-col items-center pt-6 border-t border-slate-100">
-                      <div class="flex items-center justify-center w-12 h-12 mb-3 text-xl font-bold text-white bg-purple-600 rounded-full shadow-lg md:w-14 md:h-14">خ.و</div>
-                      <p class="font-black text-slate-900">خالد وليد</p>
-                      <p class="text-xs md:text-sm text-slate-500">فني جوالات</p>
-                    </div>
-                  </div>
                 </div>
                 <div class="swiper-pagination !static mt-4"></div>
               </div>
@@ -246,9 +239,9 @@
     <div class="grid gap-12 px-6 mx-auto text-right max-w-7xl md:grid-cols-3">
       <div>
         <div class="flex items-center gap-2 mb-6">
-          <div class="p-1 text-white bg-green-600 rounded">
-            <i class="fas fa-tools"></i>
-          </div>
+         <div class="rounded-lg">
+          <img src="images/reparo.ico" class="size-10" alt="Reparo Icon">
+        </div>
           <span class="text-xl font-black tracking-tighter text-green-900">REPARO</span>
         </div>
         <p class="text-slate-500">ثورة في إدارة عمليات صيانة الهواتف باستخدام أحدث تقنيات سطح المكتب.</p>
@@ -291,7 +284,6 @@
     const templates = [
       "مرحباً عميلنا، تم إنشاء الفاتورة رقم #101 الخاصة بـ iPhone 13. سنبدأ العمل قريباً.",
       "مرحباً، الفاتورة رقم #102 قيد التنفيذ حالياً. فريقنا الفني يعمل على جهازك الآن.",
-      "مرحباً، الفاتورة رقم #103 قيد الفحص حالياً. سنوافيك بالتشخيص قريباً.",
       "بشرى سارة! جهازك جاهز للاستلام الآن. الفاتورة رقم #106 مكتملة.",
       "تم إكمال الإصلاح بنجاح للفاتورة رقم #107. شكراً لاختيارك خدماتنا."
     ];
@@ -300,6 +292,7 @@
     const badgeElement = document.getElementById('whatsapp-badge');
 
     function changeTemplate() {
+      if(!textElement) return;
       textElement.style.opacity = 0;
       setTimeout(() => {
         const randomIndex = Math.floor(Math.random() * templates.length);
