--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <title>ريباريو (Reparo) | نظام إدارة محلات صيانة الجوالات الذكي</title>
   <link rel="icon" type="image/x-icon" href="images/reparo.ico">
   <link rel="apple-touch-icon" href="images/reparo.ico">
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WPRGFQL8');</script>
+<!-- End Google Tag Manager -->
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-V899WWZKX2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -188,7 +196,10 @@
 </head>
 
 <body class="overflow-x-hidden text-white bg-black">
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPRGFQL8"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!-- Navigation -->
   <nav id="navbar" class="fixed z-50 w-full bg-transparent">
     <div class="flex items-center justify-between px-6 py-6 mx-auto max-w-7xl">
